--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                                 <div class="experience__data bd-grid">
                                     <h3 class="experience__title">Magento2 Developer</h3>
-                                    <span class="experience__company">From 2021 to till today | Design N Buy</span>
+                                    <span class="experience__company">From 2021 to 2023 | Design N Buy</span>
                                     <div class="experience__description">
                                         <p>Developed a reseller module that allow you to create mutliple websites without any storeview concept. A custom commission system for products was also implemented in that.</p>
                                         <p>Improved SEO by optimizing URLs, titles, descriptions and alt tags on all images in the store</p>
