--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                                         <p>Conducted technical analysis of existing business requirements.</p>
                                         <p>Resolved software bugs and prepared cost and time estimates.</p>
                                         <p>Maintained some stores, implemented new functionality, customized and maintained existing extensions. Had a direct communication with the customer. Made integration with third-party services and upgraded Magento version and applied patches.</p>
+                                        <p>Magento theme customization, enhancing user experience through tailored design and layout modifications for optimal website appearance and functionality.</p>
                                     </div>
                                 </div>
                             </div>
